// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Start> renders correctly while waiting for quiz data from api 1`] = `
<div
  className="MuiPaper-root-5 MuiPaper-elevation1-8 MuiPaper-rounded-6 MuiCard-root-4 Start-container-1"
>
  <h1
    className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    Welcome to the Trivia Challenge!
  </h1>
  <aside
    className="MuiTypography-root-32 MuiTypography-body2-40 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    You will be presented with 10 True or False questions.
  </aside>
  <aside
    className="MuiTypography-root-32 MuiTypography-body2-40 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    Can you score 100%?
  </aside>
  <button
    className="MuiButtonBase-root-83 MuiButtonBase-disabled-84 MuiButton-root-57 MuiButton-contained-68 MuiButton-containedPrimary-69 MuiButton-raised-71 MuiButton-raisedPrimary-72 MuiButton-disabled-77 Start-button-2"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="MuiButton-label-58"
    >
      <span>
        Loading...
      </span>
    </span>
  </button>
</div>
`;

exports[`<Start> renders correctly with quiz data from api 1`] = `
<div
  className="MuiPaper-root-5 MuiPaper-elevation1-8 MuiPaper-rounded-6 MuiCard-root-4 Start-container-1"
>
  <h1
    className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    Welcome to the Trivia Challenge!
  </h1>
  <aside
    className="MuiTypography-root-32 MuiTypography-body2-40 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    You will be presented with 10 True or False questions.
  </aside>
  <aside
    className="MuiTypography-root-32 MuiTypography-body2-40 MuiTypography-gutterBottom-49 MuiTypography-alignCenter-45"
  >
    Can you score 100%?
  </aside>
  <button
    className="MuiButtonBase-root-83 MuiButton-root-57 MuiButton-contained-68 MuiButton-containedPrimary-69 MuiButton-raised-71 MuiButton-raisedPrimary-72 Start-button-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-58"
    >
      <span>
        BEGIN
      </span>
    </span>
    <span
      className="MuiTouchRipple-root-86"
    />
  </button>
</div>
`;
